<resources>
    <string name="app_name">KotolinPractice</string>

    <!-- MainActivity -->
    <string name="start_fragment">フラグメント起動</string>
    <string name="start_webview">WebView起動</string>
    <string name="send_intent">インテント送信</string>
    <string name="hint">Send Message</string>
    <string name="start_http">HTTP通信開始</string>
    <string name="send_push">プッシュ通知送信</string>
    <string name="default_channel">default_channel</string>
    <string name="channel_description">channel_description</string>

    <!-- FragmentLaunchActivity -->
    <string name="samplefragment">フラグメントテストページ</string>


    <string name="message_received">Message Received</string>
    <string name="editText_hint">Enter Your Message Here</string>
    <string name="button_second">Reply</string>
    <string name="editText_second">Entetr Your Reply Here</string>
    <string name="excutor">Excutor実行</string>
    <string name="activity_async">非同期処理画面</string>
    <string name="weather_url">https://www.jma.go.jp/bosai/forecast/data/forecast/</string>
    <string name="refresh">更新</string>
    <string name="api_connect">API通信</string>
    <string name="viewpager">ViewPager</string>
    <string name="sharedpreferences">SharedPreferences</string>

    <string-array name="planets_array">
        <item>水星</item>
        <item>金星</item>
        <item>地球</item>
        <item>火星</item>
        <item>木星</item>
        <item>土星</item>
        <item>天王星</item>
        <item>海王星</item>
    </string-array>

</resources>